k8s/isaac-sim/ingress-0.yaml
# Isaac Sim Ingress (nginx-ovas, MetalLB 10.61.3.125)
# host: isaac-launchable-0.local
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isaac-launchable-ingress-0
  namespace: isaac-launchable
  annotations:
    nginx.org/proxy-buffering: "false"
    nginx.org/proxy-connect-timeout: 3600s
    nginx.org/proxy-read-timeout: 3600s
    nginx.org/proxy-send-timeout: 3600s
    nginx.org/server-snippets: |
      server_name ~^.*$;
    nginx.org/websocket-services: isaac-launchable-svc-0
spec:
  ingressClassName: nginx-ovas
  rules:
  - host: isaac-launchable-0.local
    http:
      paths:
      - path: /pod-0/signaling
        pathType: Prefix
        backend:
          service:
            name: isaac-launchable-svc-0
            port:
              number: 9000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: isaac-launchable-svc-0
            port:
              number: 80
